<resources>
    <string name="app_name">CameraXApp</string>
    <string name="logo">Logo</string>
    <string name="login_title">Login</string>
    <string name="username">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="login">Ingresar</string>
    <string name="go_register">¿No tienes cuenta? Regístrate</string>
    <string name="register_title">Registro</string>
    <string name="register">Registrar</string>


</resources>